--- a/index.html
+++ b/index.html
@@ -4,20 +4,37 @@
 		<meta charset="UTF-8">
 		<title>Grid System</title>
 		<link rel="stylesheet" href="css/main.css">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">  
 	</head>
 	<body>
 		<section class="grid">
 			<div class="row">
-				<div class="col col-4"></div>
-				<div class="col col-4"></div>
-				<div class="col col-4"></div>
-				<div class="col col-4"></div>
-				<div class="col col-4"></div>
-				<div class="col col-4"></div>
-				<div class="col col-4"></div>
-				<div class="col col-4"></div>
-				<div class="col col-4"></div>
-			</div>	
+				<div class="col col-3 border-general grid-home"></div>
+				<div class="col col-6 border-general grid-home">
+					<h1>Lección 29 - Ejercicio Guiado con el Profesor</h1>
+				</div>
+				<div class="col col-3 border-general grid-home"></div>
+			</div>
+			<div class="row">
+				<div class="col col-3 border-general grid-home button-central"></div>
+				<div class="col col-6 border-general grid-home button-central">
+					<a class="button-style" href="pages/grid-1.html">Grid-1</a>
+					<a class="button-style" href="pages/grid-2.html">Grid-2</a>
+					<a class="button-style" href="pages/grid-3.html">Grid-3</a>
+					<a class="button-style" href="pages/grid-4.html">Grid-4</a>
+					<a class="button-style" href="pages/grid-5.html">Grid-5</a>
+					<a class="button-style" href="pages/grid-6.html">Grid-6</a>
+					<a class="button-style" href="pages/grid-7.html">Grid-7</a>
+					<a class="button-style" href="pages/grid-8.html">Grid-8</a>
+					<a class="button-style" href="pages/grid-9.html">Grid-9</a>
+				</div>
+				<div class="col col-3 border-general grid-home button-central"></div>
+			</div>
+			<div class="row">
+				<div class="col col-3 border-general grid-home"></div>
+				<div class="col col-6 border-general grid-home"></div>
+				<div class="col col-3 border-general grid-home"></div>
+			</div>
 		</section>
 	</body>
 </html>
