--- a/pages/grid-1.html
+++ b/pages/grid-1.html
@@ -3,24 +3,24 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Grid-1</title>
-		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="../css/main.css">
 	</head>
 	<body>
 		<section class="grid">
 			<div class="row">
-				<div class="col col-4"></div>
-				<div class="col col-4"></div>
-				<div class="col col-4"></div>
+				<div class="col col-4 border-general"></div>
+				<div class="col col-4 border-general"></div>
+				<div class="col col-4 border-general"></div>
 			</div>
 			<div class="row">
-				<div class="col col-4"></div>
-				<div class="col col-4"></div>
-				<div class="col col-4"></div>
+				<div class="col col-4 border-general"></div>
+				<div class="col col-4 border-general"></div>
+				<div class="col col-4 border-general"></div>
 			</div>
 			<div class="row">
-				<div class="col col-4"></div>
-				<div class="col col-4"></div>
-				<div class="col col-4"></div>
+				<div class="col col-4 border-general"></div>
+				<div class="col col-4 border-general"></div>
+				<div class="col col-4 border-general"></div>
 			</div>
 		</section>
 	</body>
