--- a/pages/grid-2.html
+++ b/pages/grid-2.html
@@ -8,11 +8,11 @@
 	<body>
 		<section class="grid">
 			<div class="row row-grid-2">
-				<div class="col col-12 grid-2"></div>
-				<div class="col col-12 grid-2"></div>
+				<div class="col col-12 grid-2 border-general"></div>
+				<div class="col col-12 grid-2 border-general"></div>
 			</div>
 			<div class="row row-grid-2">
-				<div class="col col-4 grid-2 grid-grey"></div>
+				<div class="col col-4 grid-2 grid-grey border-general"></div>
 			</div>
 		</section>
 	</body>
