--- a/pages/grid-3.html
+++ b/pages/grid-3.html
@@ -3,16 +3,20 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Grid-3</title>
-		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="../css/main.css">
+	</head>
 	<body>
 		<section class="grid">
-			<div class="row row-grid-3">
-				<div class="col col-12 grid-2"></div>
-				<div class="col col-12 grid-2"></div>
+			<div class="row row-grid-2">
+				<div class="col col-12 grid-2 border-general"></div>
 			</div>
 			<div class="row row-grid-3">
-				<div class="col col-4 grid-grey"></div>
-			</div>
+				<div class="col col-4 grid-3 grid-grey"></div>
+				<div class="col col-4 grid-3 grid-grey"></div>
+				<div class="col col-4 grid-3 grid-grey"></div>
+				<div class="col col-4 grid-3 grid-grey"></div>
+				<div class="col col-4 grid-3 grid-grey"></div>
+				<div class="col col-4 grid-3 grid-grey"></div>
 		</section>
 	</body>
 </html>
